name:                hangman
version:             0.1.0.0
-- synopsis:
description:         Playing Hangman
homepage:            https://github.com/timbuckley/hangman-haskell
license:             BSD3
license-file:        LICENSE
author:              Tim Buckley
-- maintainer:          example@example.com
-- copyright:           2017 Author name here
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  data/dict.txt

executable hangman
  main-is:              Main.hs
  hs-source-dirs:       src
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5
                      , random
                      , split
